--- a/bbb/004.md
+++ b/bbb/004.md
@@ -73,5 +73,7 @@ SELECT * FROM md_member_distribution WHERE member_id = '00364720086f11e9a1c2d17c
 
 运行 `MemberDistributionInit` 类的 `main` 方法就行。
 
+[参考代码](/JavaLearingCode/src/main/java/top/kaoshanji/learning/scenes/memberfront/MemberDistributionInit.java)
+
 
 ----
