--- a/recite/question/006.md
+++ b/recite/question/006.md
@@ -167,3 +167,5 @@ Thread的 notify给notifyAll的区别?notifiy是唤醒的那一个线程?Thread.
 
 并发和多线程（线程池、SYNC和Lock锁机制、线程通信、volatile、ThreadLocal、CyclicBarrier、Atom包、CountDownLatch、AQS、CAS原理等等）
 
+tine..20190901
+----
