对xx一点认识

--- a/bbb/008.md
+++ b/bbb/008.md
@@ -1,6 +1,15 @@
 # Linux/CentOS 搭建Java Web环境
 
 
+##  目录
+- 软件环境
+- Nginx
+- 创建账号并指定目录
+- JDK
+- MySql
+- Redis
+- Zabbix
+
 ##  软件环境
 - SecureCRTP
 - FileZilla
@@ -47,6 +56,8 @@ ps -ax | grep nginx
 
 ##  创建账号并指定目录
 
+为前端等人员提交文件
+
 创建一个账号，并且该账号只能在指定的目录下读写
 
 ```bash
@@ -62,6 +73,8 @@ chmod 760 /home/c_f2019
 
 
 ```
+
+
 
 
 
