--- a/bbb/008.md
+++ b/bbb/008.md
@@ -2,13 +2,7 @@
 
 
 ##  目录
-- 软件环境
-- Nginx
-- 创建账号并指定目录
-- JDK
-- MySql
-- Redis
-- Zabbix
+
 
 ##  软件环境
 - SecureCRTP
@@ -21,6 +15,8 @@
 lsb_release -a
 
 ```
+
+----
 
 ##  源码安装 Nginx
 
@@ -54,7 +50,33 @@ ps -ax | grep nginx
 
 ```
 
-##  创建账号并指定目录
+----
+
+##  Java Web应用
+
+- JDK
+
+
+- Tomcat
+
+
+----
+
+##  存储支持
+
+- MySql
+
+
+- Redis
+
+----
+
+##  文件操作
+
+tar -zcvf 打包后生成的文件名全路径 要打包的目录
+// eg:tar -zcvf /home/bak/20180314/f_user.tar /home/front/dist/pc/user/
+
+- 创建账号并指定目录
 
 为前端等人员提交文件
 
@@ -71,19 +93,35 @@ passwd c_f2019
 chown -R undead:undead /home/c_f2019
 chmod 760 /home/c_f2019
 
-
 ```
 
+----
+
+##  日常
+
+能不能不要手动操作...专业的事情交给专业的"人"去做。
+
+- 服务器故障了
+
+应用突然不能访问了，怎么办?登录服务器，看看应用报什么错，日志、进程，这些都正常，再看硬件资源，磁盘、CPU，这些一个一个的猜一个一个的试...，最后可能找不到，重启一下就好了。
+
+这个时候就是系统监控软件登场了，直接通过浏览器访问，在一个界面看到所有需要关注的情况，这是个专业活。有请[zabbix](https://www.zabbix.com/cn/)，为你解决这些问题，省时省事。
+
+- 服务器上运行
+
+最最常见的事情是，每次发版要登录服务器，停止应用，上传代码..嗯，每次都要，改Bug也要...
+
+最最坑的问题是，因为软件版本问题，比如，本地环境与服务器JDK版本不一致，上传的文件是编译之后的文件，就会出现本地正常服务器异常，这是一个应用运行环境问题。
+
+解决办法是，自动部署打包，本地不再上传编译之后的文件，服务器与本地对接的是源码，各自编译去，有请[jenkins](https://jenkins.io/zh/)，代码编译运行解决了
+
+如果能够实现涉及到的软件版本一致，也就是实现了运行环境一致，那是不是更完美了，有请[docker](https://www.docker.com/)
 
 
-
-
+----
 
 ##  参考
 - [Linux中创建新用户并赋予指定目录的相关权限](https://blog.csdn.net/weiyangdong/article/details/80323661)
 - [centos7编译源码安装nginx](https://blog.csdn.net/zxlfysj2/article/details/88650295)
 
-
-
-
-
+----
