--- a/bbb/002.md
+++ b/bbb/002.md
@@ -22,8 +22,8 @@
 ----
 
 ##  Linux安装
--   U盘安装CentOS 系统需要使用USBWriter软件
--   U盘安装ubuntu 系统用ultraiso
+-   U盘安装 [CentOS](https://www.centos.org/) 系统需要使用USBWriter软件
+-   U盘安装 [ubuntu](https://ubuntu.com/) 系统用ultraiso
 
 ----
 
