--- a/bbb/008.md
+++ b/bbb/008.md
@@ -1,4 +1,4 @@
-# Linux/CentOS 搭建Java Web环境
+#   CentOS 搭建Java  生产环境
 
 
 ##  目录
@@ -56,6 +56,14 @@ ps -ax | grep nginx
 
 - JDK
 
+
+```
+// 删除自带JDK
+su root
+rpm -qa | grep java
+yum remove java-xx-opxx-hexx
+// 然后再看看
+```
 
 - Tomcat
 
