--- a/bbb/013.md
+++ b/bbb/013.md
@@ -40,17 +40,17 @@ sudo  apt-get  dist-upgrade
 ##  软件清单
 |名称|版本|描述|下载|备注|
 |----|----|----|----|----|
-|JDK|11|Java平台环境|[地址]()|选择OS对应版本|
-|Eclipse|最新版|Java开发工具|地址|Java应用开发|
-|IDEA|最新版|Java开发工具|地址|Java应用开发|
+|JDK|11|Java平台环境|[地址](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html)|选择OS对应版本，长期至此版本|
+|Eclipse|最新版|Java开发工具|[地址](https://www.eclipse.org/downloads/packages/)|Java应用开发|
+|IDEA|最新版|Java开发工具|[地址](http://www.jetbrains.com/idea/)|Java应用开发|
 |STS|最新版|Java开发工具|[地址](https://spring.io/tools/sts/)|Spring应用开发|
 |Maven|最新版|Java依赖包管理|[地址](https://maven.apache.org/)|第三方包管理，部署打包|
-|Ant|最新版|Java依赖包管理|[地址]()|tomcat编译需要|
+|Ant|最新版|Java依赖包管理|[地址](http://ant.apache.org/)|tomcat编译需要|
 |Tomcat|最新版|Java Web运行环境|[地址](http://tomcat.apache.org/)|Java Servlet规范实现|
-|datagrip|最新版|多种数据库客户端|地址|出品|
-|CLion|最新版|开发工具|地址|C/C++应用开放，JVM是个C++项目|
-|[Git](002.md)|最新版|版本控制|地址|win下载下来安装，ubantu在线安装|
-|vsCode|最新版|开发工具|地址|微软出品|
+|datagrip|最新版|多种数据库客户端|[地址](http://www.jetbrains.com/datagrip/)|Jetbrains出品|
+|CLion|最新版|开发工具|[地址](http://www.jetbrains.com/clion/)|C/C++应用开放，JVM是个C++项目|
+|[Git](002.md)|最新版|版本控制|[地址](https://git-scm.com/)|win下载下来安装，ubantu在线安装|
+|vsCode|最新版|开发工具|[地址](https://code.visualstudio.com/)|微软出品|
 
 ----
 
@@ -108,7 +108,8 @@ export MAVEN_OPTS="-Xms256m -Xmx512m"
 export PATH=$MAVEN_HOME/bin:$PATH
 
 // 刷新一下
-sudo  source /etc/profile
+sudo su     //需要切换到 root 用户下
+source /etc/profile
 ```
 
 ### 验证
