--- a/bbb/015.md
+++ b/bbb/015.md
@@ -1,5 +1,17 @@
 #   编译 openJDK 及Java框架
 
+##  工具
+
+- IDEA
+
+类方法及继承关系
+
+![20191210-221810](image/20191210-221810.png)
+
+类UML图
+
+![20191210-222234](image/20191210-222234.png)
+
 ##  编译 openJDK 11
 
 对于openJDK，只是本地编译学习研究，不需要版本控制(各种分支下载下来编译都不过)。
