--- a/bbb/008.md
+++ b/bbb/008.md
@@ -46,7 +46,8 @@ make && make install
 /usr/local/nginx/sbin/nginx  -s  stop
 
 // 查看进程
-ps -ax | grep nginx
+ps -aux | grep nginx
+
 
 ```
 
@@ -63,6 +64,22 @@ su root
 rpm -qa | grep java
 yum remove java-xx-opxx-hexx
 // 然后再看看
+
+// 打开文件
+vim /etc/profile
+
+// 输入
+# JDK
+export JAVA_HOME=/data/server/jdk1.8.0_231 
+export CLASSPATH=$JAVA_HOME/lib/ 
+export PATH=$PATH:$JAVA_HOME/bin
+
+// 生效命令
+source /etc/profile
+
+// 验证
+java -version
+
 ```
 
 - Tomcat
@@ -83,6 +100,8 @@ yum remove java-xx-opxx-hexx
 
 tar -zcvf 打包后生成的文件名全路径 要打包的目录
 // eg:tar -zcvf /home/bak/20180314/f_user.tar /home/front/dist/pc/user/
+// 解压命令：tar zxvf 压缩包名称 （例如：tar zxvf jdk-8u152-linux-x64.tar.gz） 
+// 解压 tar ： tar -xvf 压缩包名称
 
 - 创建账号并指定目录
 
