修改 固定目录

--- a/bbb/013.md
+++ b/bbb/013.md
@@ -29,11 +29,8 @@ sudo  apt-get  dist-upgrade
         -   用火狐就是因为同步啊，很少看到广告
     -   [谷歌](https://www.google.cn/chrome/)，居然可以下载浏览器，但是不能搜索
 -   目录规划
-    -   选择某个盘建：app 文件夹，作为根目录
-    -   app/GitHub，GitHub 拉下来的项目，以账户名作为下级目录，如：app/GitHub/kaoshanji，里面就是项目，再有 GitLab 等同级
-    -   app/tool，放置下载下来涉及到开发的软件，某软件以来的文件夹也放在里面，如 Maven仓库：app/tool/maven-repo
-    -   works：工作空间，某软件工作空间，不会上传，如： vscode
-    -   tmp：备份目录，保留一下
+    -   ![20191214221515](image/20191214221515.png)
+    -   ![20191214221251](image/20191214221251.png)
 
 ----
 
