--- a/bbb/013.md
+++ b/bbb/013.md
@@ -37,10 +37,10 @@ sudo  apt-get  dist-upgrade
 ##  软件清单
 |名称|版本|描述|下载|备注|
 |----|----|----|----|----|
-|JDK|11|Java平台环境|[地址](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html)|选择OS对应版本，长期至此版本|
-|Eclipse|最新版|Java开发工具|[地址](https://www.eclipse.org/downloads/packages/)|Java应用开发|
+|JDK|11|Java平台环境|[地址](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html)|选择OS对应版本，此版本长期支持|
+|Eclipse|最新版|Java开发工具|[地址](https://www.eclipse.org/downloads/packages/)|Java应用开发，官网不好下考虑[镜像](https://mirror.tuna.tsinghua.edu.cn/eclipse/technology/epp/downloads/release/)|
 |IDEA|最新版|Java开发工具|[地址](http://www.jetbrains.com/idea/)|Java应用开发|
-|STS|最新版|Java开发工具|[地址](https://spring.io/tools/sts/)|Spring应用开发|
+|STS|最新版|Java开发工具|[地址](https://spring.io/tools/sts/)|Spring应用开发，基于Eclipse，增加了一些spring插件|
 |Maven|最新版|Java依赖包管理|[地址](https://maven.apache.org/)|第三方包管理，部署打包|
 |Ant|最新版|Java依赖包管理|[地址](http://ant.apache.org/)|tomcat编译需要|
 |Tomcat|最新版|Java Web运行环境|[地址](http://tomcat.apache.org/)|Java Servlet规范实现|
