--- a/bbb/201912/003.md
+++ b/bbb/201912/003.md
@@ -21,7 +21,7 @@
 ```
     net config workstation
 ```
-- ![20180107174114](image/samba/20180107174114.png)
+- ![20180107174114](image/20180107174114.png)
 - Windows 机器必须和这台CentOS7在同一个工作组
 - 查看及安装 samba
 ```
