--- a/server/lang/l001/j001/j104/bbb/201.md
+++ b/server/lang/l001/j001/j104/bbb/201.md
@@ -5,3 +5,13 @@
 -   缓冲器
 -   选择器
 -   字符集
+
+
+##  代码
+-   打开文件通道并写入数据
+-   对文件通道的绝对位置进行读写操作
+-   使用文件通道保存网页内容
+-   文件复制：字节缓冲区
+-   文件复制：文件通道
+-   内存映射文件
+-   文件锁
