一天写一点

--- a/server/lang/l001/j001/j104/bbb/201.md
+++ b/server/lang/l001/j001/j104/bbb/201.md
@@ -15,3 +15,11 @@
 -   文件复制：文件通道
 -   内存映射文件
 -   文件锁
+-   套接字：阻塞式客户端
+-   套接字：阻塞式服务端
+-   多路复用套接字：客户端
+-   Buffer
+    -   ByteBuffer 示例
+    -   字节缓存区的字节顺序
+    -   字节缓存区的压缩操作
+    -   字节缓存区视图
