--- a/server/lang/l001/j001/j104/bbb/101x.md
+++ b/server/lang/l001/j001/j104/bbb/101x.md
@@ -4,10 +4,12 @@
 -   文件抽象：File
 -   字节流
 -   字符流
--   套接字
+-   [套接字](140x.md)
+
 
 
 ##  代码
 -   输入流 复制：BufferedInputStream
 -   输入流 复制：ByteArrayOutputStream
+-   向已有的 zip 文件中添加新文件的传统做法
 
