--- a/server/lang/l001/j001/j104/bbb/140x.md
+++ b/server/lang/l001/j001/j104/bbb/140x.md
@@ -2,7 +2,7 @@
 
 ##  主要内容
 -   [基本网络概念](1410.md)
--   Internet地址：连接域名系统(DNS)
+-   [Internet地址](1411.md)：连接域名系统(DNS)
 -   URL和URI：从多种网络服务器中下载信息和文件
 -   HTTP：REST、HTTP首部和cookie
 -   URLConnection：上传文档和配置连接
