--- a/server/lang/l001/j001/j104/bbb/101x.md
+++ b/server/lang/l001/j001/j104/bbb/101x.md
@@ -1,9 +1,9 @@
 #   IO
 
 ##  内容概述
--   文件抽象：File
--   字节流
--   字符流
+-   [文件抽象](110x.md)：File
+-   [字节流](120x.md)
+-   [字符流](130x.md)
 -   [套接字](140x.md)
 
 
