--- a/server/lang/l001/j001/j104/bbb/140x.md
+++ b/server/lang/l001/j001/j104/bbb/140x.md
@@ -1,14 +1,14 @@
 #   套接字
 
 ##  主要内容
--   [基本网络概念](1410.md)
--   [Internet地址](1411.md)：连接域名系统(DNS)
--   URL和URI：从多种网络服务器中下载信息和文件
--   HTTP：REST、HTTP首部和cookie
--   URLConnection：上传文档和配置连接
--   客户端 Socket
--   服务端 Socket
--   安全的 Socket 
+-   [基本网络概念](1411.md)
+-   [Internet地址](1421.md)：连接域名系统(DNS)
+-   [URL和URI](1431.md)：从多种网络服务器中下载信息和文件
+-   [HTTP](1441.md)：REST、HTTP首部和cookie
+-   [URLConnection](1451.md)：上传文档和配置连接
+-   [客户端 Socket](1461.md)
+-   [服务端 Socket](1471.md)
+-   [安全的 Socket](1481.md)
 
 ----
 
