--- a/server/lang/l001/j001/j104/bbb/1441.md
+++ b/server/lang/l001/j001/j104/bbb/1441.md
@@ -1,17 +1,64 @@
 #   HTTP
 
-167
+超文本传输协议(HTTP)是一个标准，定义了Web客户端如何与服务器对话，以及数据如何从服务器传回客户端。尽管通常认为HTTP是一种传输HTML文件以及文件中内嵌图片的方法，但实际上HTTP是一个数据格式，他可以用来传输TIFF图片、Word文档、win的.exe文件，或者任何其他可以用字节表示的东西。
 
 ##  HTTP协议
 
+HTTP是Web浏览器和Web服务器之间通信的标准协议，HTTP连接使用TCP/IP来传输数据。
 
+-   对于从客户端到服务器的每一个请求，都有4个步骤：
+    -   默认情况下，客户端在端口80打开与服务器的一个TCP连接，URL中还可以指定其他端口
+    -   客户端向服务器发送消息，请求指定路径上的资源。这个请求包括一个首部，可选的还可以有一个空行，后面是这个请求的数据
+    -   服务器向客户端发送响应，响应以响应码开头，后面是包含元数据的首部、一个空行以及所请求的文档或错误信息
+    -   服务器关闭连接
+
+这是基本HTTP 1.0过程，在HTTP 1.1 及以后版本中，可以通过一个 TCP连接连续发送多个请求和响应，在第1步和第4步之间，第2步和第3步可以反复多次。
+
+每个请求和响应都有同样的基本形式：一个首部行、一个包含元数据的HTTP首部、一个空行，然后是一个消息体。
+
+响应码：100-199 表示提供信息的响应，200-299 指示成功，300-399 表示重定向，400-499 指示一个客户端错误， 500-599 表示一个服务器错误
 
 ##  HTTP方法
 
+与HTTP服务器的通信遵循一种 请求-响应模式：先是一个无状态的请求，后面是一个无状态的响应，每个HTTP请求包含两个或三个部分：
 
+-   起始行，包含HTTP方法和要执行这个方法的资源的路径
+-   一个包含名-值字段的首部，可以提供元信息，如认证凭据和请求中首选使用的格式
+-   一个请求主体，包含资源的一个表示(只针对POST和PUT)
+
+主要有4个HTTP方法，来标识可以完成的操作：
+
+-   GET：可以获取一个资源的表示，没有副作用，如果失败，完全可以重复执行
+-   POST：将资源的一个表示上传到已知URL的服务器，没有指定服务器如何处理这个新提供的资源
+-   PUT：将资源的一个表示上传到已知URL的服务器，具有幂等性
+-   DELETE：从一个指定的URL删除一个资源，具有幂等性
 
 ##  请求主体
 
+GET方法获取URL所标识的资源的一个表示，用GET从服务器获取的资源的具体位置由路径和查询字符串的不同部分指定。
 
+POST和PUT要复杂一些，客户端除了要提供路径和查询字符串，还有提供资源的表示，资源表示在请求主体中发送，放在首部后面。
 
 ##  Cookie
+
+网站使用一些小文本串在连接之间存储持久的客户端状态，这些小文本串称为 cookie。
+
+cookie 在请求和响应的HTTP首部，从服务器传递到客户端，再从客户端传回服务器，服务器使用cookie来指示会话ID、购物车内容、登录凭据、用户首选项等
+
+cookie值通信并不包含数据，只是指示服务器上的数据。
+
+只要服务器不重用cookie，这会使它在多个HTTP连接上跟踪各个用户和会话。
+
+服务器可以设置不止一个cookie。
+
+### CookieManager
+
+抽象类java.net.CookieHandler定义了存储和获取cookie的一个API，CookieHandler是前者的具体子类。
+
+### CookieStore
+
+有时需要在本地存放和获取 cookie，可以用 getCookieStore()方法获取这个cookie库，CookieManager就在这里保存他的cookie。
+
+CookieStore类允许你增加、删除和列出cookie，使你能控制在正常HTTP请求和响应流之外发送的cookie。
+
+----
