--- a/server/lang/l001/j001/j104/bbb/1451.md
+++ b/server/lang/l001/j001/j104/bbb/1451.md
@@ -2,35 +2,139 @@
 
 >   上传文档和配置连接
 
+>   top.kaoshanji.leaning.jdkx.io.net.URLConnectionDemo
+
+URLConnection 是一个抽象类，表示指向URL指定资源的活动连接。
+
+-   代码
+    -   使用 URLConnection 下载一个 Web 页面
+    -   用正确的字符集下载一个 Web 页面
+    -   从 Web 网站下载二进制文件并保存到磁盘
+    -   显式整个HTTP首部
+    -   提交一个表单
+
+URLConnection 对与服务器(特别是HTTP服务器)的交互提供了更多的控制，可以检查服务器发送的首部，并相应地做出响应，设置客户端请求中使用的首部字段，可以用 POST、PUT和其他HTTP请求方法向服务器发回数据。
+
+URLConnection 类是Java的协议处理器机制的一部分，协议处理器的思想：将处理协议的细节与处理特定数据类型分开，提供相应的用户接口，并完成完整的Web浏览器所完成的其他操作。
+
+要实现一个特定的协议，就要编写一个子类，可以在运行时由应用程序加载。
+
+URLConnection 类的具体子类都隐藏在 sun.net 包层次结构中，很少会在源代码中直接实例化一个 URLConnection 对象，相反，运行时环境会根据所用的协议来创建所需的对象，然后使用 java.lang.Class 类的 forName() 和 newInstance() 方法实例化这个类。
 
 ##  打开 URLConnection
 
+-   直接使用 URLConnection 类的程序遵循以下基本步骤：
+    -   构造一个URL对象
+    -   调用这个URL对象的 openConnection() 获取一个对应URL的 URLConnection 对象
+    -   配置这个 URLConnection
+    -   读取首部字段
+    -   获得输入流并读取数据
+    -   获得输出流并写入数据
+    -   关闭连接
 
 ##  读取服务器的数据
 
+-   使用 URLConnection 对象从一个 URL 获取数据所需的最起码的步骤：
+    -   构造一个 URL 对象
+    -   调用这个 URL 对象的 openConnection() 方法，获取对应该 URL 的 URLConnection 对象
+    -   调用这个 URLConnection 的 getInputStream() 方法
+    -   使用通常的流 API 读取输入流
+
+getInputStream() 方法返回一个通用 InputStream，可以读取和解析服务器发送的数据。
 
 ##  读取首部
+
+HTTP服务器在每个响应前面的首部中提供了大量信息。
+
+一般来说，HTTP首部可能包含所请求文档的内容类型、文档长度(字节数)、对内容编码所采用的字符集、日期时间、内容的过期时间及内容的最后修改日期。
+
+### 获取指定的首部字段
+
+方法对应着响应字段名
+
+前6个方法可以请求首部中特定的常用字段。
+
+### 获取任意首部字段
 
 
 ##  缓存
 
+一些HTTP首部可以控制缓存。
+
+一般认为使用GTE通过HTTP访问的页面可以缓存，也应当缓存，使用HTTPS或POST访问的页面通常不应缓存。
+
+-   HTTP首部可以对此做出调整
+    -   Expires首部(主要针对HTTP 1.0)指示可以缓存这个资源表示，直到指定的时间为止
+    -   Cache-control首部(HTTP 1.1)提供了细粒度的缓存策略
+    -   Last-modified首部指示资源最后一次修改的日期
+    -   Etag首部(HTTP 1.1)是资源改变时这个资源的唯一标识符
+
+### Java的Web缓存
+
+Java要安装URL类使用的系统级缓存才能实现缓存。
 
 ##  配置连接
 
+URLConnection 类有7个保护的实例字段，定义了客户端如何向服务器做出请求。
+
+只能在 URLConnection 连接之前修改这些字段。
+
+### 超时
+
+控制 socket 等待建立连接的时间，控制输入流等待数据到达的时间
 
 ##  配置客户端请求HTTP首部
 
+HTTP客户端(如浏览器)向服务器发送一个请求行和一个首部
 
+Web服务器可以根据这个信息向不同的客户端提供不同的页面，获取和设置cookie，通过口令认证用户等。
+
+通过在客户端发送和服务器响应的首部中放置不同的字段，就可以完成这些工作。
+
+每个 URLConnection 会在首部设置一些不同的名-值对。
+
+打开连接前，可以使用 setRequestPropertry() 方法为HTTP首部增加首部字段
 
 ##  向服务器写入数据
 
+向 URLConnection 写入数据，使用 POST向Web服务器提交表单，或者使用PUT上传文件。 getOutputStream() 方法返回一个 OutputStream，可以用来写入数据传送给服务器
+
+-   提交表单数据需要以下步骤
+    -   确定要发送给服务器端程序的名-值对
+    -   编写接收和处理请求的服务器端请求
+    -   在Java程序中创建一个查询字符串，字符串应当形式： name1=value1&name2=value2&name3=value3，拼接前需要传递到 URLEncoder.encode()
+    -   打开一个 URLConnection，指定将接受数据的程序的URL
+    -   调用 setDoOutput(true) 设置为 true
+    -   将查询字符串写入到 URLConnection 的 OutputStream
+    -   关闭 OutputStream
+    -   从 URLConnection 的 InputStream 读取服务器响应
 
 ##  URLConnection 的安全考虑
+
+建立网络连接、读/写文件等存在一些常见的安全限制，URLConnection 对象会收到这些安全限制的约束。 
 
 
 ##  猜测MIME媒体类型
 
+在不确定资源的情况下可以猜测一下文件类型
 
 ##  HttpURLConnection
 
+HttpURLConnection 是 URLConnection 的抽象子类，他提供可另外一些方法，在处理 http URL 时尤其有帮助。
 
+他包含的方法可以获取和设置请求方法、确定是否重定向、获得响应码和消息，以及确定是否使用了代理服务器。
+
+HttpURLConnection 是个抽象类，唯一的构造函数是保护类型，不能直接创建 HttpURLConnection 的实例，使用 http URL 构造一个URL对象并调用其 openConnection() 方法，返回的 URLConnection 就是 HttpURLConnection 的一个实例，可以将 URLConnection 强制转换为 HttpURLConnection。
+
+### 断开与服务器的连接
+
+HTTP 1.1 支持持久连接，允许通过一个 TCP socket 发送多个请求和响应，使用 Keep-Alive 时，服务器不会因为已经向客户端发送了最后一字节的数据就立即关闭连接。客户端还有可能会发送另一个请求。
+
+HttpURLConnection 类透明的支持 HTTP Keep-Alive，除非显式将其关闭，也就是说，在服务器关闭连接之前，如果再次连接同一个服务器，他会重用 socket。
+
+### 处理服务器响应
+
+HTTP 服务器响应的第一行包括一个数字码和一个消息，指示做出了何种响应。
+
+
+----
