--- a/server/lang/l001/j001/j104/bbb/1461.md
+++ b/server/lang/l001/j001/j104/bbb/1461.md
@@ -1,20 +1,136 @@
 #   客户端 Socket
 
+>   Socket 允许程序员将网络连接看作是另外一个可以读/写字节的流，遮盖了网络底层细节，如错误检测、包大小、包分解、包重传、网络地址等。
+
+>   top.kaoshanji.leaning.jdkx.io.SocketDemo
+
+-   代码
+    -   Daytime协议客户端
+    -   一个基于网络的英语-拉丁语翻译程序
+    -   查看指定主机上前 1024 个端口中那些安装有 TCP 服务器
+
+在 Internet 上，数据按有限大小的包传输，这些包称为数据报，每个数据报包含一个首部(header)和一个有效载荷(payload)。`首部`包含包发送的地址和端口、包来自的地址和端口、检测数据是否被破坏的校验和，以及用于保证可靠传输的各种其他管理信息。`有效载荷`包含数据本身，由于数据报长度有限，必须将数据分解为多个包，再在目的地重新组合，也有可能一个包或多个包在传输中丢失或遭到破坏，需要重传，或者包乱序到达，需要重新排序。
+
+将数据分解为包、生成首部、解析入站包的首部、跟踪那些包已经收到而那些没有收到等是很繁重的工作，需要大量复杂的代码。
 
 ##  使用 Socket
 
+-   Socket 是两台主机之间的一个连接，可以完成7个基本操作：
+    -   连接远程机器
+    -   发送数据
+    -   接收数据
+    -   关闭连接
+    -   绑定端口
+    -   监听入站数据
+    -   在绑定端口上接受来自远程机器的连接
+
+Java的Socket类(客户端和服务器都可以使用)提供了对应前4个操作的方法，后面3个操作仅服务器需要，即等待客户端的连接，这些由 ServerSocket 类实现。
+
+-   Java程序通常采用以下方式使用客户端 Socket
+    -   程序使用构造函数创建一个新的 Socket
+    -   Socket 尝试连接远程主机
+
+一旦建立了连接，本地和远程主机就从这个 Socket 得到输入流和输出流，使用这两个流相互发送数据，连接是双全工的，两台主机都可以同时发送和接收数据，数据的含义取决于协议，发送给FTP服务器的命令和发送给HTTP服务器的命令就有所不同。
 
 ##  用Telnet研究协议
 
+Socket 本身非常简单，不过，与不同服务器通信的协议会使工作变得复杂
 
+使用 Telnet 模拟一个客户端，查看客户端和服务器如何交互，从而了解Java程序需要做什么。 
+
+### 用 Socket 从服务器读取
+
+网络程序中重点工作通常是使用协议和理解数据格式。
+
+### 用 Socket 写入服务器
+
+只需要向 Socket 请求一个输出流以及一个输入流。
+
+使用输出流在 Socket 上发送数据时，同时还可以使用输入流读取数据，不过大多数协议都设计为客户端只读取 Socket 或只写入 Socket，而不是二者同时进行。
+
+最常见的模式是，客户端发送一个请求，然后服务器响应。
+
+### 半关闭 Socket
+
+close() 方法同时关闭 Socket 的输入和输出。
+
+shutdown 方法只影响 Socket 的流，并不释放与 Socket 关联的资源，如所占用的端口等。
 
 ##  构造和连接 Socket
 
+java.net.Socket 类是 Java完成客户端TCP操作的基础类，其他建立TCP网络连接的面向客户端的类(如URL、URLConnection)最终都会调用这个类的方法，这个类本身使用原生代码与主机操作系统的本地TCP栈进行通信。
+
+### 基本构造函数
+
+每个Socket构造函数指定要连接的主机和端口，主机可以指定为 InetAddress 或 String，远程端口指定为 1 到 65535 之间的 int 值。
+
+构造函数会连接 Socket，在构造函数返回之前，会与远程主机建立一个活动的网络连接。
+
+### 选择从哪个本地接口连接
+
+网络接口可以是物理接口(例如，一个以太网卡)，也可以是虚拟接口(一个有多个IP地址的多宿主主机)。如果为 localPort 参数传入0，Java会随机选择 1024 - 65535 之间的一个可用端口。
+
+### 构造但不连接
+
+分解创建对象和网络连接
+
+如果没有为 Socket 构造函数提供任何参数，他就没有目标主机可以连接
+
+先使用无参数的构造函数创建 Socket 对象，再为某个 connect() 方法传入一个 SocketAddress 来建立连接。
+
+### Socket 地址
+
+SocketAddress 类表示一个连接端点，这是一个空的抽象类，除了一个默认构造函数外没有其他方法，目前只支持 TCP/IP Socket，实际使用的 Socket 地址都是 InetSocketAddress 的实例。
+
+SocketAddress 类的主要用途是为暂时的 socket 连接信息(如IP地址和端口)提供一个方便的存储，即使最初的 socket 已断开并被垃圾回收，这些信息也可以重用来创建新的 socket，Socket 类提供了两个返回 SocketAddress 对象的方法。
+
+### 代理服务器
+
+通过一个指定的代理服务器连接创建一个未连接的 Socket。
+
+### 获取 Socket 的信息
+
+-   Socket 对象有一些属性可以通过获取方法来访问：
+    -   远程地址
+    -   远程端口
+    -   本地地址
+    -   本地端口
+
+### 关闭还是连接
+
+如果 Socket 关闭，isClosed() 方法会返回 true，否则返回 false，如果 Socket 从为连接，也会返回 false
+
+isConnected() 方法会指出 Socket 是否从未从未连接过一个远程主机，如果确实能够连接远程主机，返回 true，即使这个Socket已经关闭
+
+``` Java
+// 查看一个Socket当前是否打开
+boolean connected = socket.isConnected() && !socket.isClosed();
+```
+
+isBound() 会告诉你 Socket 是否成功地绑定到本地系统上的出站接口，isConnected()指示的是 Socket 的远程端
+
+### toString()
+
+Socket 类只覆盖了 java.lang.Object中的一个标准方法： toString()，主要用于调试，不要依赖这个格式，将来可能会变
+
+这个字符串的所有部分都可以通过其他方法直接访问。
 
 ##  设置 Socket 选项
 
+Socket 选项指定了 Java Socket 类所依赖的原生 socket 如何发送和接收数据。
+
+这些选项的滑稽名字来自 Berkeley UNIX 所使用的C头文件中的命名常量，Socket 就是 Berkeley UNIX 发明的。
 
 ##  Socket 异常
 
+仅仅知道发生了问题，这对于处理问题往往是不够的， SocketException 有几个子类，可以对出现什么问题以及为什么会出现问题提供有关的更多信息：
+
+-   BindException：端口被占用或没有权限
+-   ConnectException：被远程主机拒绝，因为主机忙或没有进程在监听该端口
+-   NoRouteToHostException：连接已经超时了
+-   ProtocolException：从网络接收的数据违反TCP/IP规范
+
 
 ##  GUI应用中的 Socket
+
+网络代码本身很容易，难的是用户界面。
