--- a/server/lang/l001/j001/j104/bbb/1471.md
+++ b/server/lang/l001/j001/j104/bbb/1471.md
@@ -1,23 +1,129 @@
 #   服务端 Socket
 
+>   服务器 Socket 等待连接，而客户端 Socket 发起连接。
 
+>   top.kaoshanji.leaning.jdkx.io.ServerSocketDemo、MultithreadedDaytimeServer、PooledDaytimeServer、EchoServer、SingleFileHTTPServer、Redirector
+
+-   代码
+    -   daytime服务器
+    -   时间服务器：遵循 RFC 868 时间协议的迭代时间服务器
+    -   多线程 dayTime服务器：为每个入站连接生成一个新线程处理
+    -   线程池版 dayTime服务器
+    -   线程池版的 单文件 HTTP服务器
+    -   多线程版 重定向 HTTP 服务器
+    -   线程池版 JHTTP Web 服务器
+
+
+对于接受连接的服务器，Java 提供了一个 ServerSocket 类表示服务器 Socket，服务器 Socket 在服务器上运行，监听入站 TCP 连接。每个服务器 Socket 监听服务器机器上的一个特定端口，当远程主机上的一个客户端尝试连接这个端口时，服务器就被唤醒，协商建立客户端和服务器之间的连接，并返回一个常规的 Socket 对象，表示两台主机之前的 Socket。
 
 ##  使用 ServerSocket
 
+ServerSocket 类包含了使用 Java 编写服务器所需的全部内容，其中包含创建新 ServerSocket 对象的构造函数、在指定端口监听连接的方法、配置各个服务器 Socket 选项的方法，以及其他一些常见的方法，如 toString()。
+
+-   在 Java 中，服务器程序的基本生命周期如下：
+    -   使用一个 ServerSocket() 构造函数在一个特定端口创建一个新的 ServerSocket
+    -   ServerSocket 使用其 accept() 方法监听这个端口的入站连接，accept() 会一直阻塞，直到一个客户端尝试建立连接，此时 accept() 将返回一个连接客户端和服务器的 Socket 对象
+    -   根据服务器的类型，会调用 Socket 的 getInputStream() 方法或 getOutputStream() 方法，或者这两个方法都调用，以获得与客户端通信的输入和输出流
+    -   服务器和客户端根据已协商的协议交互，直到要关闭连接
+    -   服务器或客户端(或二者)关闭连接
+    -   服务器返回到步骤2，等待下一次连接
+
+### 提供二进制数据
+
+发送二进制的非文本数据并不难，只需要使用一个写 byte 数组的 OutputStream，而不是写 String 的 Writer。
+
+### 多线程服务器
+
+Java程序应当生成一个线程与客户端交互，这样服务器就能够尽快准备处理下一个连接。
+
+操作系统将把指向某个特定端口的入站连接请求存储在一个先进先出的队列中，队列中填入的未处理连接达到其(最大)容量时，主机会拒绝这个端口上额外的连接，直到队列腾出新的位置为止。客户端在首次连接被拒绝后还会多次尝试建立连接。
+
+### 关闭服务器 Socket
+
+如果使用完一个服务器 Socket，就应当将他关闭，特别是当程序还要继续执行一段时间时更是如此，这会释放端口，使其他希望使用这个端口的程序可以使用。
+
+关闭 ServerSocket 会释放本地主机的一个端口，允许另一个服务器绑定到这个端口，还会中断该 ServerSocket 已经接受的目前处于打开状态的所有 Socket。
+
+```Java
+// ServerSocket是否打开
+ss.isBound() && !ss.isClosed();
+```
 
 ##  日志
 
+服务器要在无人看管的情况下运行很长时间，通常在很久之后对服务器中发生的情况进行调试，需要存储服务器日志，并且还要保留一段时间。
+
+### 日志记录内容
+
+-   日志中记录的两个主要内容：
+    -   请求
+    -   服务器错误
+
+服务器一般会为这两项内容维护两个不同的日志文件。与服务器建立的每一个连接会分别包含一个记录，每个连接完成多个操作的服务器可能对每个操作都有一个记录。
+
+错误日志则主要包含服务器运行期间发生的意外异常，错误日志不包含客户端错误，如意外断开连接或发送一个错误请求的客户端。
+
+对于错误日志，一般经验是错误日志中的每一行都应当查看和解决，理想记录数应当是0，这个日志中的每一个记录都表示一个需要研究和解决的bug。如果错误日志中充斥太多假警报，那么他很快就被忽视而变得毫无用处。
+
+不要在生产阶段保存调试日志，不要把每一次进入一个方法、每次满足某个条件等情况都记录日志，没人会看，只会浪费空间，而且隐藏真正的问题。
+
+一旦出现问题，有时需要那些消息是很明显的，但很难提前预测需要这些消息，不要把所有一切都记入日志。
+
+### 如果记录日志
+
+Java 1.4 提供了 java.util.logging 包，是一个日志包
+
+还用第三方日志库。。
 
 ##  构造服务器 Socket
 
+有4个公共的 ServerSocket 构造函数，这些构造函数可以指定端口、保存入站连接请求所用的队列的长度，以及要绑定的本地网路接口。
+
+一台机器可能有多个IP地址，可以根据需要监听指定IP地址和端口，例如，监听本地IP地址而不是外部网络请求
+
+### 构造但不绑定端口
+
+无参数构造函数会创建一个 ServerSocket 对象，但未将他具体绑定到某个端口，所以初始时他不能接受任何连接，以后可以使用 bind() 来进行绑定。
+
+允许程序在绑定端口之前设置服务器 socket 选项，有些选项在服务器 socket 绑定后必须固定。
 
 ##  获得服务器 Socket 的有关信息
 
+ServerSocket 类提供了两个获取方法，可以指出这个服务器 Socket 占用的本地地址和端口。
 
 ##  Socket 选项
+
+Socket 选项指定了 ServerSocket 类所依赖的原生 Socket 如何发送和接收数据。
+
+-   对于服务器Socket，Java支持一下3个选项：
+    -   SO_TIMEOUT：在 accept() 抛出 InterruptedIOException 异常前等待入站连接的时间，大多数服务器都设计为运行无限长时间，使用默认值0(永不超时)
+    -   SO_REUSEADDR：确定是否允许一个新的Socket绑定到之前使用过的一个端口
+    -   SO_RCVBUF：接受客户端 Socket 默认接收缓冲区大小
+
+### 服务类型
+
+不同的 Internet 服务类型有不同的性能需求
+
+-   TCP定义了4个通用业务流类型：
+    -   低成本
+    -   高可靠性
+    -   最大吞吐量
+    -   最小延迟
 
 
 ##  HTTP 服务器
 
+定制服务器不只是对小网站有用，大流量的网站也可以使用定制服务器，因为与一般用途的服务器(Apache或IIS)相比，只做一件事情的服务器通常要快得多，针对某个特定任务来优化一个特殊用途的服务器会很容易，其结果往往比需要响应多种不同请求的一般用途服务器高效得多。
 
+### 单文件服务器
+
+要研究HTTP服务器，先从一个简单的服务器开始，无论接收什么请求，这个服务器都始终发送同一个文件。
+
+### 重定向器 Redirector
+
+重定向能够将用户从一个Web网站重定向到另一个网站。
+
+### 功能完备的HTTP服务器
+
+功能完备的HTTP服务器，提供一个完整的文档树，包括图像、applet、HTML文件、文本文件等，关注GET请求
 
