--- a/server/lang/l001/j001/j104/bbb/101x.md
+++ b/server/lang/l001/j001/j104/bbb/101x.md
@@ -1,6 +1,9 @@
 #   IO
 
+流，表示数据传输的方向，处理的单位是字节，是一种同步阻塞模式。
+
 ##  内容概述
+-   [IO概述](150x.md)
 -   [文件抽象](110x.md)：File
 -   [字节流](120x.md)
 -   [字符流](130x.md)
