--- a/server/lang/l001/j001/j104/bbb/1481.md
+++ b/server/lang/l001/j001/j104/bbb/1481.md
@@ -1,27 +1,94 @@
 #   安全的 Socket
 
+
+>   top.kaoshanji.leaning.jdkx.io.HTTPSClient
+
+-   代码
+    -   HTTPSClient
+
+作为一个 Internet 用户，需要一些保护手段防范官方的监视。为了使 Internet 连接从根本上更加安全，可以对 Socket 加密，这可以保持事务的机密性、真实性和准确性。
+
+Java 安全 Socket 扩展(JSSE)可以使用安全 Socket 层(SSL)版本和传输层安全(TLS)协议及相关算法来保护网络通信的安全。SSL是一种安全协议，允许Web浏览器和其他TCP客户端基于各种级别的机密性和认证与HTTP和其他TCP服务器对话。
+
 ##  保护通信
 
+经过开放通道(如公共 Internet)的私密通信绝对需要对数据加密。适合计算机实现的大多数加密机制都是基于密钥思想，密钥是一种更加一般化的口令，并不限于文本。
+
+传统的私密密钥(或对称密钥)加密中，加密和解密数据都使用相同的密钥，发送方和接收方必须知道这个密钥。
+
+公开密钥(或非对称密钥)加密中，加密和解密数据使用不同的密钥。一个密钥称为公开密钥，用于加密数据，这个密钥可以给任何人。另一个密钥称为私有密钥，用于解密数据，私有密钥必须秘密保存，只有通信中的一方拥有它。
+
+非对称加密也可用于身份认证和消息完整性检查。
+
+JSSE 遮盖了如何协商算法、交换密钥、认证通信双方和加密数据的底层细节。
+
+-   JSSE分为四个包：
+    -   javax.net.ssl：定义Java安全网络通信API的抽象类
+    -   javax.net：替代构造函数创建安全 Socket 的抽象 Socket 工厂类
+    -   javax.security.cert：处理SSL所需公开密钥证书的类
+    -   com.sun.net.ssl：Sun的JSSE参考实现中实现加密算法和协议的具体类，不属于JSSE标准的一部分
 
 ##  创建安全客户端 Socket
 
+从 javax.net.ssl.SSLSocketFactory 使用其 createSocket() 方法得到一个 Socket 对象。SSLSocketFactory 是一个遵循抽象工厂设计模式的抽象类，要通过调用静态 SSLSocketFactory.getDefault() 方法得到一个实例：
+
+```Java
+SSLSocketFactory factory = SSLSocketFactory.getDefault();
+Socket socket = factory.createSocket("login.ibiblio.org", 7000);
+```
+一旦创建了安全的 Socket ，就可以像其他任何 Socket 一样使用，即通过其 getInputStream()、getOutputStream() 和其他方法来加以使用。
+
+不要希望所有内容都通过HTTP提供，只有确实需要保证秘密而且不太关心延迟的内容才会通过HTTPS传输
 
 ##  选择密码组
+
+JSSE 的不同实现支持认证和加密算法的不同组合。
+
+实际使用的密码组要在连接时由客户端和服务器协商。
 
 
 ##  事件处理器
 
+网络通信相对于大多数计算机速度而言都很慢，认证的网络通信甚至更慢，考虑使用异步处理连接。
+
+JSSE 使用标准 Java 事件模型来通知程序，告诉他们客户端和服务器之间的握手何时完成。
+
+为了得到握手结束事件的通知，只需要实现 HandshakeCompletedListener 接口
+
 
 ##  会话管理
 
+SSL 常用于 Web 服务器。
+
+Web 连接一般都是暂时的，每个页面需要单独的 Socket。
+
+两台主机之间为建立安全通信需要完成握手，由于这个握手过程有很大的开销，SSL允许建立扩展到多个 Socket 的会话。相同会话中的不同 Socket 使用一组相同的公开密钥和私有密钥，只有会话中的第一个 Socket 需要承受生成和交换密钥带来的开销。
+
+如果在很短的一段时间内对一台主机的一个端口打开多个安全 Socket，JSSE 会自动重用这个会话的密钥。
+
+在高安全性应用程序中，可能希望禁止 Socket 之间的会话共享，或强制会话重新认证，在 JSSE 中，会话由 SSLSession 接口的实例表示，可以使用这个接口的方法来检查会话的创建时间和最后访问时间、将会话作废、得到会话的各种有关信息。
 
 ##  客户端模式
 
+服务器需要使用适当的证书认证自己，客户端大多时候不需要，但是，访问银行网站客户端浏览器是需要安装证书滴。。
 
 ##  创建安全服务器Socket
 
+安全客户端 Socket 只是问题的一半，还需要启动SSL的服务器 Socket ， 是 javax.net.SSLServerSocket 类的实例。
 
-##  配置SSLServerSocket
+-   要在参考实现中创建一个安全服务器 Socket ，必须完成以下步骤
+    -   使用 keytool 生成公开密钥和证书
+    -   花钱请可信任的第三方认证你的证书
+    -   为你使用的算法创建一个 SSLContext
+    -   为你要使用的证书源创建一个 TrustManagerFactory
+    -   为你要使用的密钥类型创建一个 KeyManagerFactory
+    -   为密钥和证书数据库创建一个 KeyStore 对象
+    -   用密钥和证书填充 KeyStore 对象
+    -   用 KeyStore 及其口令短语初始化 KeyManagerFactory
+    -   用 KeyManagerFactory 中的密钥管理器(必要)、TrustManagerFactory中的信任管理器和一个随机源来初始化上下文
 
 
+##  配置 SSLServerSocket
+
+SSLServerSocket 提供了选择密码组、管理会话和确立客户端是否需要自行认证的方法。
 
