--- a/server/lang/l001/j001/j104/bbb/201x.md
+++ b/server/lang/l001/j001/j104/bbb/201x.md
@@ -2,11 +2,15 @@
 
 >   依据 《Java NIO(中文版)》- Ron Hitchens
 
+NIO来源和主要内容：[NIO规范](https://jcp.org/en/jsr/detail?id=51)
+
 ##  内容概述
--   通道
--   缓冲器
--   字符集
--   套接字
+-   [前言](260x.md)
+-   [NIO概述](250x.md)
+-   [缓冲区](220x.md)
+-   [通道](210x.md)
+-   [字符集](230x.md)
+-   [套接字](240x.md)
 
 
 
